--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ footer {
   position: absolute;
   top: 25px;
   left: 25px;
-  font-size: 2.5em;
+  font-size: 1.2em; /* ✅ taille réduite et adaptée */
   color: #a020f0;
   font-family: 'Press Start 2P', cursive;
   text-decoration: none;
@@ -257,6 +257,7 @@ footer {
   color: #fff;
   text-shadow: 0 0 10px #fff, 0 0 20px #fff;
 }
+
 
 .certif-frame {
   position: fixed;
@@ -286,4 +287,20 @@ footer {
   padding: 10px;
   cursor: pointer;
   font-size: 1em;
+}
+
+.search-bar {
+  display: block;
+  margin: 30px auto 0 auto; /* top margin + centré horizontalement */
+  padding: 12px 20px;
+  width: 50%;
+  max-width: 400px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 0.8em;
+  border: 2px solid #a020f0;
+  border-radius: 8px;
+  background-color: #000;
+  color: white;
+  text-align: center;
+  box-shadow: 0 0 10px #a020f0;
 }
